--- a/store.html
+++ b/store.html
@@ -160,19 +160,18 @@
                 </div>
             </div>
         </section>
-
         <footer class=" text-light border-light border-top rounded-top">
             <div class="container">
                 <div class="grid">
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 ms-5">
                             <ul class="footer-list p-3">
                                 <li  class=" splitG p-2 mb-1"><a href="https://www.ladbible.com/news/guinness-challenge-pub-right-way-20221025">Split the G, but which way?</a></li>
                                 <li class="splitG p-2 mb-1"><a href="https://www.drinkaware.co.uk/?gclid=EAIaIQobChMI1I-gnt3IggMV0otoCR3AiwX_EAAYASAAEgKdvfD_BwE" class="footer-link mb-1 p-2">Drink Aware</a></li>
                                 <li  class="beefLink p-2 mb-1"> <a href="">This christmas, Santa goes to the beefeater</a></li>
                             </ul>
                         </div>
-                        <div class=" footerLinks col-3 justify-self-end p-3 d-flex flex-column ms-auto align-items-center">
+                        <div class=" footerLinks col-md-3 justify-self-end p-3 d-flex flex-column ms-auto align-items-center">
                             <a href="https://www.facebook.com/guinness"><i class="fab fa-facebook text-light fa-2x mb-1 p-1"></i></a>
                             <a href="https://twitter.com/guinnessgb"><i class="fab fa-twitter text-light fa-2x mb-1 p-1"></i></a>
                             <a href="https://youtu.be/Lc8wTkyTysA"><i class="fab fa-youtube text-light fa-2x mb-1 p-1"></i></a>
@@ -185,6 +184,6 @@
                   <h6 class="guinessText">Guinness&#169; is a registered trademark dont steal it's IP</h6>
                 </div>
             </div>
-          </footer>    
+          </footer>   
 </body>
 </html>
